overlays/atuin/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: atuin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin-server
  labels:
    app: atuin-server
spec:
  selector:
    matchLabels:
      app: atuin-server
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: atuin-server
      labels:
        app: atuin-server
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: atuin-server
          image: ghcr.io/atuinsh/atuin:latest
          args:
            - start
          imagePullPolicy: IfNotPresent
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8888
              name: atuin-port
          volumeMounts:
            - name: atuin-volume
              mountPath: /config
      volumes:
        - name: atuin-volume
          persistentVolumeClaim:
            claimName: atuin-pvc
      restartPolicy: Always
