overlays/atuin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin-svc
spec:
  selector:
    app: atuin-server
  type: ClusterIP
  ports:
    - name: atuin-port
      protocol: TCP
      port: 80
      targetPort: 8888
