overlays/atuin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: atuin-ingressroute
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`atuin.int.mvaldes.dev`)
      services:
        - name: atuin-svc
          port: 80
